# cargo-prepare

./: Cargo.toml
src/: main.rs
